kltekdi: add FeliCa Support from KBC

--- a/arch/arm/configs/msm8974pro_sec_klte_kdi_defconfig
+++ b/arch/arm/configs/msm8974pro_sec_klte_kdi_defconfig
@@ -199,6 +199,10 @@ CONFIG_VPNCLIENT_SECURITY=y
 #
 CONFIG_EXTCON=y
 CONFIG_EXTCON_MAX77804K=y
+#FeliCa
+CONFIG_FELICA=y
+CONFIG_NFC_FELICA=y
+CONFIG_FELICA_NO_SECURE=y
 
 #
 # RCU
